[tool.poetry]
name = "adventofcode-2020"
version = "0.1.0"
description = ""
authors = ["Meir <maornet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
more-itertools = "^10.2.0"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
pytest = "^8.0.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
